use auto margin to solve comp exhibit flex overflow issue.

--- a/src/site/client/assets/styles/home/component-exhibit.scss
+++ b/src/site/client/assets/styles/home/component-exhibit.scss
@@ -22,6 +22,7 @@
 
     .iframe-container {
       position: relative;
+      margin: auto; // To make the overflowed top of the exhibit visible. https://stackoverflow.com/a/33455342/11316104
 
       iframe {
         border: $border;
@@ -60,8 +61,8 @@
 
     .responsiveness-info {
       position: absolute;
-      top: 8px; // TODO: Not sure why this needs to be more than 5px yet.
-      left: 5px;
+      top: 3px;
+      left: 3px;
       z-index: 1;
       cursor: default;
 
